--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-aria": "^1.6.2",
     "async": "^2.1.2",
     "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
